--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "start": "react-native start"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-picker/picker": "1.9.11",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.5",
+    "@stripe/stripe-react-native": "0.1.1",
     "expo": "~41.0.1",
     "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.4",
@@ -14,14 +19,30 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
+    "react-native-config": "^1.4.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.1.0",
+    "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-unimodules": "~0.13.3",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.9.0",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.2",
+    "@types/node": "^14.14.7",
+    "@babel/runtime": "^7.9.6",
+    "@types/react": "~16.9.35",
+    "@types/react-native": "~0.63.2",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "metro-react-native-babel-preset": "^0.59.0",
+    "path": "^0.12.7",
+    "stripe": "^8.0.1",
+    "typescript": "~4.0.0"
   },
   "private": true
 }
